Fix Mist style with sub menu
When the sub menu exists, there is too large space between the sub menu and the post block.

--- a/source/css/_schemes/Mist/_posts-expand.styl
+++ b/source/css/_schemes/Mist/_posts-expand.styl
@@ -27,7 +27,7 @@
     display: none;
   }
 
-  .post-block:not(:first-child) {
+  .post-block:not(:first-of-type) {
     margin-top: 120px;
   }
 
